syntax = "proto3";

package api.houyi.common;

option go_package = "github.com/moon-monitor/moon/pkg/api/houyi/common;common";

message TeamItem {
	uint32 teamId = 1;
	string uuid = 2;
}